2007-06-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (outBitC, genRet): used IS_OP_RUONLY,
	  (genNot, genXor): used toCarry, also fixes a bug for c = bit ^ val
	* src/mcs51/ralloc.c: removed IS_OP_RUONLY + some cosmetic changes
	* src/SDCCast.c (resultTypePropagate): propagate for '!',
	  (decorateType): also optimize comparisons with RESULT_TYPE_BIT,
	  bugfix: only use newBoolLink for bit result type
	* src/SDCCicode.c (geniCodeLogic): added param tree,
	  bugfix: use newBoolLink if tree is bit type, bug appears when ruonly,
	  (geniCodeLogicAndOr): use IS_BIT,
	  (geniCodeJumpTable, geniCodeSwitch): added NULL param to geniCodeLogic,
	  (ast2iCode): added tree param to geniCodeLogic for comparisons
	* src/SDCCsymt.h: added IS_OP_RUONLY and IS_OP_ACCUSE
	* support/regression/tests/bug1723128.c: added test NotZero

2007-06-01 Borut Razem <borut.razem AT siol.net>

	* SDCPP synchronized with GCC CPP release version 4.2.0,
	  currently the latest release:
	* support/cpp2/c-incpath.c, support/cpp2/c-incpath.h,
	  support/cpp2/c-ppoutput.c, support/cpp2/cppdefault.c,
	  support/cpp2/cppdefault.h, support/cpp2/except.h,
	  support/cpp2/libcpp/directives.c, support/cpp2/libcpp/expr.c,
	  support/cpp2/libcpp/files.c, support/cpp2/libcpp/include/cpplib.h,
	  support/cpp2/libcpp/init.c, support/cpp2/libcpp/internal.h,
	  support/cpp2/libcpp/lex.c, support/cpp2/libcpp/macro.c,
	  support/cpp2/libcpp/mkdeps.c, support/cpp2/libiberty/getpwd.c,
	  support/cpp2/libiberty/hashtab.c, support/cpp2/optc-gen.awk,
	  support/cpp2/opth-gen.awk, support/cpp2/opts.c,
	  support/cpp2/opts.h, support/cpp2/output.h,
	  support/cpp2/prefix.c, support/cpp2/sdcpp-opts.c,
	  support/cpp2/sdcpp.dsp, support/cpp2/sdcpp.opt,
	  support/cpp2/system.h, support/cpp2/version.c,
	  support/cpp2/Makefile.in: modified
	* support/cpp2/opts-common.c: added
	* device/lib/pic16/libdev/pic18f[24][45]j10.c: fixed svn atrributes
	* device/lib/pic16/libdev/pic18f[24]5j10.c: